@@ -1,6 +1,11 @@
 2015-04-20  Natalia Portillo  <claunia@claunia.com>
 
 	* PartPlugins/Atari.cs:
+	  Added support for NetBSD partition identifiers.
+
+2015-04-20  Natalia Portillo  <claunia@claunia.com>
+
+	* PartPlugins/Atari.cs:
 	* DiscImageChef.csproj:
 	  Implemented support for Atari partitions.
 
